--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,6 +11,7 @@ services:
       - ./NB4444/media/foto:/NB4444/media/foto
     ports:
       - "9999:9999"
+    restart: always
 
   nb4_vue_prod:
     build: ./nb4444-vue
@@ -18,3 +19,4 @@ services:
     command: sh -c "npm run serve -- --port 90"
     ports:
       - "90:90"
+    restart: always
