docker: separate dev and prod images

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,7 +3,9 @@ version: "3.3"
 
 services:
   nb4_api_prod:
-    build: ./NB4444
+    build:
+      context: ./NB4444
+      dockerfile: prod.Dockerfile
     image: 'nb4444-prod-api'
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:9999"
     volumes:
@@ -14,7 +16,9 @@ services:
     restart: always
 
   nb4_vue_prod:
-    build: ./nb4444-vue
+    build:
+      context: ./nb4444-vue
+      dockerfile: prod.Dockerfile
     image: 'nb4444-prod-vue'
     command: sh -c "npm run serve -- --port 90"
     ports:
